# pico

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cieto_Rename_Codex_Guide.md  README.md  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  file.c  file.h  hashtable.c  hashtable.h  keywords.gperf  keywords.h  list.c  list.h  main.c  manual.md  mem.c  mem.h  object.c  object.h  repl.c  repl.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
.github/workflows/: cmake.yml
api/: cieto.c  pico.c
benchmarks/: bench_arithmetic_loop.pcs  bench_function_calls.pcs  bench_gc_churn.pcs  bench_list_ops.pcs  bench_map_ops.pcs  bench_object_dispatch.pcs  bench_string_gc_stats.cies  bench_string_gc_stats.pcs  bench_string_ops.cies  bench_string_ops.pcs
cmd/: main.c  repl.c  repl.h
compiler/: compiler.c  compiler.h  keywords.gperf  scanner.c  scanner.h
core/: chunk.c  chunk.h  common.h  file.c  file.h  gc_policy.c  gc_policy.cpp  gc_policy.h  gc_types.h  hashtable.c  hashtable.h  mem.c  mem.h  object.c  object.h  value.c  value.h  version.h  writer.c  writer.h
examples/: argv_echo.cies  argv_echo.pcs  defer_file.cies  defer_file.pcs  fibonacci.pcs  file_indexer.cies  file_indexer.pcs  gc_demo.cies  gc_demo.pcs  shebang.cies  shebang.pcs  tour.cies  tour.pcs  word_count.cies  word_count.pcs
examples/data/: sample.txt
examples/embedding/: README.md  basic.c  call_script.c  native_function.c
examples/embedding/external-cmake/: CMakeLists.txt  main.c
examples/modules/: main.cies  main.pcs  stats.pcs
include/: cieto.h  pico.h
modules/: fs.c  fs.h  glob.c  glob.h  list.h  modules.h  os.c  path.c  path.h  string.c  string.h  time.c
std/: registry.c  registry.h
std/container/: iter.c  iter.h  list.c
std/fs/: fs.c  fs.h  glob.c  glob.h  path.c  path.h
std/methods/: list.c  list.h  string.c  string.h
std/modules/: fs.c  fs.h  gc.c  gc.h  glob.c  glob.h  os.c  os.h  path.c  path.h  time.c  time.h
std/prelude/: iter.c  iter.h
std/sys/: gc.c  gc.h  os.c  os.h  time.c  time.h
std/text/: string.c  string.h
tests/: assert.cies  assert.pcs  embedding_call_script.c  embedding_exit_policy.c  embedding_native_function.c  embedding_output_callback.c  math_lib.cies  math_lib.pcs  run_tests.ps1  run_tests.sh  test_collections.cies  test_collections.pcs  test_control_flow.cies  test_control_flow.pcs  test_functions.cies  test_functions.pcs  test_gc.cies  test_gc.pcs  test_gc_mode.cies  test_gc_mode.pcs  test_gc_stress.cies  test_gc_stress.pcs  test_modules.cies  test_modules.pcs  test_oop.cies  test_oop.pcs  test_operators.cies  test_operators.pcs  test_std_fs.cies  test_std_fs.pcs  test_strings.cies  test_strings.pcs  test_syntax_basics.cies  test_syntax_basics.pcs  test_system_command.cies  test_system_command.pcs
tests/module_cases/: main.cies  main.pcs
tests/module_cases/cache/: counter.cies  same_a.cies  same_a.pcs  same_b.cies  same_b.pcs
tests/module_cases/lib/: outer.cies  outer.pcs
vm/: debug.c  debug.h  global_env.c  global_env.h  instruction.h  module_loader.c  module_loader.h  vm.c  vm.h
